...
    <string name="name_pb_cnk_l3">Modern Ed. Centre L2 [CNK]</string>
    <string name="name_pb_wa">Architecture [WA]</string>
    <string name="name_pb_wa_l0">Architecture L-1 [WA]</string>
    <string name="name_pb_wa_l2">Architecture L1 [WA]</string>
    <string name="name_pb_wa_l3">Architecture L2 [WA]</string>
    <string name="name_pb_wa_l4">Architecture L3 [WA]</string>
    <string name="name_pb_wb">CE/ES\n[WB]</string>
    <string name="name_pb_wb_iet">CE/ES IET [WB]</string>
    <string name="name_pb_wb_l0">CE/ES L-1 [WB]</string>
    <string name="name_pb_wb_l0_iet">CE/ES IET L-1 [WB]</string>
    <string name="name_pb_wb_l2">CE/ES L1 [WB]</string>
    <string name="name_pb_wb_l2_iet">CE/ES IET L1 [WB]</string>
    <string name="name_pb_wb_l3">CE/ES L2 [WB]</string>
    <string name="name_pb_wb_l3_iet">CE/ES IET L2 [WB]</string>
    <string name="name_pb_wb_l4_iet">CE/ES IET L3 [WB]</string>
    <string name="name_pb_we">EE\n[WE]\n</string>
    <string name="name_pb_we_l2">EE L1 [WE]</string>
    <string name="name_pb_we_l3">EE L2 [WE]</string>
    <string name="name_pb_we_l4">EE L3 [WE]</string>
    <string name="name_pb_wi">CS\n[WI]</string>
    <string name="name_pb_wi_l0">CS L0 [WI]</string>
    <string name="name_pb_wi_l2">CS L1 [WI]</string>
    <string name="name_pb_wi_l3">CS L2 [WI]</string>
    <string name="name_pb_wm">ME\n[WM]</string>
    <string name="name_pb_wm_l2">ME L1 [WM]</string>
    <string name="name_pb_wm_l3">ME L2 [WM]</string>
...
    <string name="name_silent_zone">Silent room</string>
    <string name="name_wc">WC</string>
    <string name="name_zpdiut">ZPDiUT</string>
    <string name="name_deanery_121">Deanery 121</string>
    <string name="name_deanery">Deanery</string>
    <string name="name_secretariat">Secretariat</string>
    <string name="name_pb_campus">BUT Campus</string>
    <string name="name_rector">Rector\'s office</string>
    <string name="name_lodge">Lodge</string>
    <string name="name_courts">Tennis\ncourts</string>
    <string name="name_ds_alpha">Alpha\nDorm</string>
    <string name="name_ds_beta">Beta\nDorm</string>
    <string name="name_ds_gamma">Gamma\nDorm</string>
...
REGON: 000001672 NIP: 5420208721,
tel. centr. +48 85-746-90-00 | fax. +48 85-746-90-15</string>
    <string name="address_pb_wi">Faculty of Computer Science,
Wiejska 45A St., 15-351 Bialystok,
tel. +48 85-746-90-50 | fax. +48 85-746-90-57,
e-mail: wi.sekretariat@pb.edu.pl</string>
    <string name="address_pb_wb">Faculty of Civil and Environmental Engineering,
Wiejska 45E St., 15-351 Bialystok,
tel. +48 85-746-95-60 | fax. +48 85-746-95-59,
e-mail: wbiis@pb.edu.pl</string>
    <string name="address_pb_zwl">Faculty of Forestry in Hajnówka,
J. Piłsudzkiego 1A, 17-200 Hajnówka, zwl.sekretariat@pb.edu.pl, tel. +48 85-682-95-00,
J. Piłsudzkiego 8, 17-200 Hajnówka, zwl.dziekanat@pb.edu.pl, tel. +48 85-682-95-01</string>
...
    <string name="address_pb_wz_campus">Faculty of Engineering Management,
Ojca Tarasiuka 2 St., 16-001 Kleosin,
wz.sekretariat@pb.edu.pl, tel. +48 85-746-98-02</string>
    <string name="address_pb_acs">Academic Sports Centre,
Wiejska 41 St., 15-351 Bialystok,
studium.wf@pb.edu.pl, tel. +48 85-746-97-00</string>
    <string name="address_gwint">GWINT Students club,
ul. Zwierzyniecka 10,
15-333 Bialystok</string>


    <string name="name_002a">002A</string>
    <string name="name_002b">002B</string>
...
    <string name="name_63b">63B</string>
    <string name="name_64b">64B</string>
    <string name="name_65b">65B</string>
    <string name="name_66b">66B</string>
    <string name="name_67b">67B</string>
    <string name="name_68b">68B</string>
    <string name="name_69b">69B</string>
    <string name="name_6a">6A</string>
    <string name="name_6b">6B</string>
    <string name="name_74b">74B</string>
    <string name="name_7b">7B</string>
    <string name="name_7c">7C</string>
    <string name="name_8a">8A</string>
...
