...
            android:layout_gravity="start"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/logo" />

        <TextView
            android:id="@+id/info_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorPrimaryText"
            android:textStyle="bold" />
...
        android:id="@+id/info_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin" />

    <TextView
        android:id="@+id/info_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:autoLink="all"
        android:gravity="end"
        android:linksClickable="true" />

    <TextView
        android:id="@+id/info_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:autoLink="all"
        android:gravity="center_horizontal"
        android:linksClickable="true" />
...
